--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,11 +6,35 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
+  --light-theme-bg-color: #ddd;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* Colors Brand */
+  --main-color: #45d;
+  --main-color-hover: #219;
+  --second-color: #5a3;
+  --thirth-color: #ba6;
+
+  --btn-bg-color: transparent;
+  --btn-bg-color-active: #555;
+  --btn-bg-color-active-light: #dddddd60;
+  --btn-border-color-hover: #bbb;
+
+  /*  - - Category colors - -  */
+  --card-bg-color-red: #cc5555;
+  --card-bg-color-green: #40aa40;
+  --card-bg-color-blue: #8080ff;
+  --card-bg-color-yellow: #bbbb60;
+  --card-bg-color-orange: #ccaa70;
+  --card-bg-color-magenta: #bb55bb;
+  --card-color-white: #282828;
+  --card-bg-color-white: #eee;
+  --card-color-black: #eee;
+  --card-bg-color-black: #282828;
 }
 
 a {
@@ -24,8 +48,12 @@ a:hover {
 
 body {
   margin: 0;
+  overflow-x: hidden;
+}
+#root {
   display: flex;
-  place-items: center;
+  flex-flow: column wrap;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -34,35 +62,55 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0.5rem;
+}
 
 button {
-  border-radius: 8px;
+  /*  border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  font-weight: 500;
+  background-color: #1a1a1a;*/
+  font-size: 1em;
   cursor: pointer;
   transition: border-color 0.25s;
+  border: 2px solid var(--main-color);
+  border-radius: 0.75rem;
+  background-color: var(--btn-bg-color);
+  padding: 0.25rem 0.75rem;
+  margin: 0.25rem;
 }
+
 button:hover {
+  border-color: var(--main-color-hover);
+}
+button:active {
+  background-color: var(--btn-bg-color-active);
+}
+/* button:hover {
   border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: var(--light-theme-bg-color);
   }
   a:hover {
     color: #747bff;
   }
-  button {
+  /* button {
     background-color: #f9f9f9;
-  }
+  } */
 }
