Td003 - Frontend part 1: get, post and delete ok, UI not finished

--- a/frontend/src/components/Form/Form.css
+++ b/frontend/src/components/Form/Form.css
@@ -1,14 +1,14 @@
-form {
+.f-form {
   display: flex;
   border: 2px solid transparent;
   border-radius: 1.5rem;
-  background-color: #454545;
+  background-color: var(--forms-bg-color);
   padding: 0;
   min-width: 21rem;
   min-height: 2.5rem;
 }
-form input,
-form button {
+.f-form input,
+.f-form button {
   font-size: 1.1rem;
   margin: 0.25rem;
   outline: none;
@@ -16,30 +16,30 @@ form button {
   border-radius: 2rem;
   background-color: transparent;
 }
-form input::placeholder {
-  color: #aaa;
+.f-form input::placeholder {
+  color: var(--forms-color);
 }
-form input[type="text"] {
+.f-form input[type="text"] {
   margin: 0.25rem 0.5rem 0.25rem 1rem;
 }
-form input[type="submit"]:hover,
-form button:hover {
+.f-form input[type="submit"]:hover,
+.f-form button:hover {
   border: 2px solid var(--btn-border-color-hover);
 }
-form input[type="submit"]:active,
-form button:active {
+.f-form input[type="submit"]:active,
+.f-form button:active {
   background-color: var(--btn-bg-color-active);
 }
 
 @media (prefers-color-scheme: light) {
-  form {
-    background-color: #fff;
+  .f-form {
+    background-color: var(--forms-bg-color-light);
   }
-  form input::placeholder {
-    color: #777;
+  .f-form input::placeholder {
+    color: var(--forms-color-light);
   }
-  form input[type="submit"]:active,
-  form button:active {
+  .f-form input[type="submit"]:active,
+  .f-form button:active {
     background-color: var(--btn-bg-color-active-light);
   }
 }
