--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,6 +24,12 @@
   --btn-bg-color-active-light: #dddddd60;
   --btn-border-color-hover: #bbb;
 
+  --forms-bg-color: #454545;
+  --forms-bg-color-light: #fff;
+  --forms-bg-color-trans: #70707080;
+  --forms-color: #aaa;
+  --forms-color-light: #777;
+
   /*  - - Category colors - -  */
   --card-bg-color-red: #cc5555;
   --card-bg-color-green: #40aa40;
@@ -72,12 +78,6 @@ h6 {
 }
 
 button {
-  /*  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-family: inherit;
-  font-weight: 500;
-  background-color: #1a1a1a;*/
   font-size: 1em;
   cursor: pointer;
   transition: border-color 0.25s;
@@ -93,6 +93,10 @@ button:hover {
 }
 button:active {
   background-color: var(--btn-bg-color-active);
+}
+.btn-add-newNote {
+  background-color: var(--btn-bg-color);
+  margin: 0.5rem;
 }
 /* button:hover {
   border-color: #646cff;
@@ -113,4 +117,12 @@ button:focus-visible {
   /* button {
     background-color: #f9f9f9;
   } */
+}
+@media (min-width: 700px) {
+  .btn-add-newNote {
+    position: fixed;
+    top: 4.5rem;
+    right: 2rem;
+    background-color: var(--btn-bg-color);
+  }
 }
